--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,6 +3,9 @@
 # KindEditor 变更记录
 #
 #######################################################################
+ver 3.4.4
+* BUG: 修改了在IE上焦点自动移动到编辑区域的问题。
+
 ver 3.4.3 (2010-05-26)
 * BUG: 修改了重复编辑超级链接时每次都添加&amp;的问题。
 * BUG: 修改了在IE上右键菜单没有复制、剪切项目的问题。
