--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -6,6 +6,7 @@
 ver 3.4.4
 * BUG: 修改了在IE上焦点自动移动到编辑区域的问题。
 * BUG: 修改了在IE上打开类型无法修改成当前窗口的问题。
+* 改善: 显示菜单后再点将关闭此菜单。
 
 ver 3.4.3 (2010-05-26)
 * BUG: 修改了重复编辑超级链接时每次都添加&amp;的问题。
