--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,7 +3,7 @@
 # KindEditor 变更记录
 #
 #######################################################################
-ver 3.4.4
+ver 3.4.4 (2010-05-29)
 * BUG: 修改了在IE上焦点自动移动到编辑区域的问题。
 * BUG: 修改了在IE上打开类型无法修改成当前窗口的问题。
 * BUG: 修改了全选后无法取消超级链接的问题。
