--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -7,6 +7,7 @@ ver 3.4.4 (2010-05-29)
 * BUG: 修改了在IE上焦点自动移动到编辑区域的问题。
 * BUG: 修改了在IE上打开类型无法修改成当前窗口的问题。
 * BUG: 修改了全选后无法取消超级链接的问题。
+* BUG: 修改了切换代码模式时编辑器轻微抖动的问题。
 * 改善: 显示菜单后再点将关闭此菜单。
 
 ver 3.4.3 (2010-05-26)
