--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,6 +9,7 @@ ver 3.4.4 (2010-06-01)
 * BUG: 修改了全选后无法取消超级链接的问题。
 * BUG: 修改了切换代码模式时编辑器轻微抖动的问题。
 * BUG: 修改了在IE上切换代码模式时有时候不出现滚动条的问题。
+* BUG: 修改了在Chrome 5.0上反复切换代码模式有时候出现崩溃页面的问题。
 * 改善: 显示菜单后再点将关闭此菜单。
 
 ver 3.4.3 (2010-05-26)
