--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,6 +3,18 @@
 # KindEditor 变更记录
 #
 #######################################################################
+ver 3.5
+* 增加: 增加了表格编辑功能。
+* 增加: 引入了多国语言机制。
+* 增加: 标题、字体、文字大小、颜色可以反映当前状态。
+* 增加: 右键菜单支持图标和分割线。
+* 增加: 表情功能增加分页和预览。
+* 改善: 改善了文章内容比较多时速度比较慢的问题。
+* 改善: 编辑器底部显示向下拖动指示图标。
+* BUG: 修改了在IE上选中图片或表格后无法用backspace键删除的问题。
+* BUG: 修改了在Firefox上全屏后浏览器一直处于加载状态的问题。
+* BUG: 修改了在非IE上DOMContentLoaded事件不起作用的问题。
+
 ver 3.4.4 (2010-06-01)
 * BUG: 修改了在IE上焦点自动移动到编辑区域的问题。
 * BUG: 修改了在IE上打开类型无法修改成当前窗口的问题。
