--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,6 +9,7 @@ ver 3.5
 * 增加: 标题、字体、文字大小、颜色可以反映当前状态。
 * 增加: 右键菜单支持图标和分割线。
 * 增加: 表情功能增加分页和预览。
+* 增加: 增加了弹出框阴影效果。
 * 改善: 改善了文章内容比较多时速度比较慢的问题。
 * 改善: 编辑器底部显示向下拖动指示图标。
 * BUG: 修改了在IE上选中图片或表格后无法用backspace键删除的问题。
