--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,6 +12,7 @@ ver 3.5
 * 增加: 增加了弹出框阴影效果。
 * 改善: 改善了文章内容比较多时速度比较慢的问题。
 * 改善: 编辑器底部显示向下拖动指示图标。
+* 改善: 点击编辑器外的页面其它部位时关闭菜单。
 * BUG: 修改了在IE上选中图片或表格后无法用backspace键删除的问题。
 * BUG: 修改了在Firefox上全屏后浏览器一直处于加载状态的问题。
 * BUG: 修改了在非IE上DOMContentLoaded事件不起作用的问题。
