--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -17,6 +17,7 @@ ver 3.5
 * BUG: 修改了在Firefox上全屏后浏览器一直处于加载状态的问题。
 * BUG: 修改了在非IE上DOMContentLoaded事件不起作用的问题。
 × BUG: 修改了删除编辑器时没有销毁事件的问题。
+* BUG: 修改了设置成无颜色时其它样式也被删除的问题。
 
 ver 3.4.4 (2010-06-01)
 * BUG: 修改了在IE上焦点自动移动到编辑区域的问题。
