[trunk] Added KE.selectedHtml, modified KE.insertHtml

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -10,6 +10,7 @@ ver 3.5
 * 增加: 右键菜单支持图标和分割线。
 * 增加: 表情功能增加分页和预览。
 * 增加: 增加了弹出框阴影效果。
+* 增加: 增加了新接口。(KE.html,KE.text,KE.selectedHtml,KE.insertHtml,KE.appendHtml,KE.isEmpty等)
 * 改善: 改善了文章内容比较多时速度比较慢的问题。
 * 改善: 编辑器底部显示向下拖动指示图标。
 * 改善: 点击编辑器外的页面其它部位时关闭菜单。
