[trunk] Fixed issue #112: fix drag bug

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -11,14 +11,15 @@ ver 3.5
 * 增加: 表情功能增加分页和预览。
 * 增加: 增加了弹出框阴影效果。
 * 增加: 增加了新接口。(KE.html,KE.text,KE.selectedHtml,KE.insertHtml,KE.appendHtml,KE.isEmpty等)
-* 改善: 改善了文章内容比较多时速度比较慢的问题。
 * 改善: 编辑器底部显示向下拖动指示图标。
 * 改善: 点击编辑器外的页面其它部位时关闭菜单。
+* BUG: 改善了文章内容比较多时速度比较慢的问题。
 * BUG: 修改了在IE上选中图片或表格后无法用backspace键删除的问题。
 * BUG: 修改了在Firefox上全屏后浏览器一直处于加载状态的问题。
 * BUG: 修改了在非IE上DOMContentLoaded事件不起作用的问题。
 × BUG: 修改了删除编辑器时没有销毁事件的问题。
 * BUG: 修改了设置成无颜色时其它样式也被删除的问题。
+* BUG: 修改了拖动时拖到浏览器外面放开鼠标后会粘住的问题。
 
 ver 3.4.4 (2010-06-01)
 * BUG: 修改了在IE上焦点自动移动到编辑区域的问题。
