--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -21,6 +21,7 @@ ver 3.5
 * BUG: 修改了设置成无颜色时其它样式也被删除的问题。
 * BUG: 修改了拖动时拖到浏览器外面放开鼠标后会粘住的问题。
 * BUG: 修改了在Firefox上pre标签自动生成br标签的问题。
+* BUG: 修改了在IE6上用KE.cmd.wrap方法设置class属性后没有效果的问题。
 
 ver 3.4.4 (2010-06-01)
 * BUG: 修改了在IE上焦点自动移动到编辑区域的问题。
