[trunk] Modified changelog

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,7 +3,7 @@
 # KindEditor 变更记录
 #
 #######################################################################
-ver 3.5
+ver 3.5 (2010-06-20)
 * 增加: 增加了表格编辑功能。
 * 增加: 引入了多国语言机制。
 * 增加: 标题、字体、文字大小、颜色可以反映当前状态。
