--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -15,6 +15,7 @@ ver 3.5 (2010-06-20)
 * 改善: 点击编辑器外的页面其它部位时关闭菜单。
 * 改善: 移除编辑器时将编辑器内容设置到原来的textarea。
 * 改善: 从外部粘贴内容时自动将font转换成span标签。
+* 改善: ASP.NET程序改成ashx，使用时不需要编译。
 * BUG: 改善了文章内容比较多时速度比较慢的问题。
 * BUG: 修改了在IE上选中图片或表格后无法用backspace键删除的问题。
 * BUG: 修改了在Firefox上全屏后浏览器一直处于加载状态的问题。
