[trunk] Modified changelog

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -20,7 +20,7 @@ ver 3.5 (2010-06-20)
 * BUG: 修改了在IE上选中图片或表格后无法用backspace键删除的问题。
 * BUG: 修改了在Firefox上全屏后浏览器一直处于加载状态的问题。
 * BUG: 修改了在非IE上DOMContentLoaded事件不起作用的问题。
-× BUG: 修改了删除编辑器时没有销毁事件的问题。
+* BUG: 修改了删除编辑器时没有销毁事件的问题。
 * BUG: 修改了设置成无颜色时其它样式也被删除的问题。
 * BUG: 修改了拖动时拖到浏览器外面放开鼠标后会粘住的问题。
 * BUG: 修改了在Firefox上pre标签自动生成br标签的问题。
