--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,6 +3,9 @@
 # KindEditor 变更记录
 #
 #######################################################################
+ver 3.5.1
+* BUG: 修改了表格左侧插入列时单元格移位的问题。
+
 ver 3.5 (2010-06-20)
 * 增加: 增加了表格编辑功能。
 * 增加: 引入了多国语言机制。
