[trunk] Fixed issue #118

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -5,6 +5,7 @@
 #######################################################################
 ver 3.5.1
 * BUG: 修改了表格左侧插入列时单元格移位的问题。
+* BUG: 修改了在Firefox上设置全局CSS后高度计算不正确的问题。
 
 ver 3.5 (2010-06-20)
 * 增加: 增加了表格编辑功能。
