--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,6 +9,7 @@ ver 3.5.1
 * BUG: 修改了ASP上传程序无法上传大写扩展名文件的问题。
 * BUG: 修改了在Firefox上调用KE.html函数在某些情况下JS报错的问题。
 * BUG: 修改了在IE6、IE7上只读模式下不显示内容的问题。
+* BUG: 修改了JSP演示程序提交中文数据后出现乱码的问题。
 
 ver 3.5 (2010-06-20)
 * 增加: 增加了表格编辑功能。
