--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -10,6 +10,7 @@ ver 3.5.1
 * BUG: 修改了在Firefox上调用KE.html函数在某些情况下JS报错的问题。
 * BUG: 修改了在IE6、IE7上只读模式下不显示内容的问题。
 * BUG: 修改了JSP演示程序提交中文数据后出现乱码的问题。
+* BUG: 修改了通过insertHtml插入HTML时URL自动变成绝对域名的问题。
 
 ver 3.5 (2010-06-20)
 * 增加: 增加了表格编辑功能。
