[trunk] Fixed #124: cannot clear background-color of table

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -12,6 +12,7 @@ ver 3.5.1
 * BUG: 修改了JSP演示程序提交中文数据后出现乱码的问题。
 * BUG: 修改了通过insertHtml插入HTML时URL自动变成绝对域名的问题。
 * BUG: 修改了在IE上用BR换行时回车换行自动选中下面内容的问题。
+* BUG: 修改了设置表格背景颜色后不能取消颜色的问题。
 
 ver 3.5 (2010-06-20)
 * 增加: 增加了表格编辑功能。
