--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,7 +3,7 @@
 # KindEditor 变更记录
 #
 #######################################################################
-ver 3.5.1
+ver 3.5.1 (2010-07-18)
 * BUG: 修改了表格左侧插入列时单元格移位的问题。
 * BUG: 修改了在Firefox上设置全局CSS后高度计算不正确的问题。
 * BUG: 修改了ASP上传程序无法上传大写扩展名文件的问题。
