--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,6 +3,9 @@
 # KindEditor 变更记录
 #
 #######################################################################
+ver 3.5.2
+* BUG: 修改了在IE下拖动调整大小不够顺畅的问题。
+
 ver 3.5.1 (2010-07-18)
 * BUG: 修改了表格左侧插入列时单元格移位的问题。
 * BUG: 修改了在Firefox上设置全局CSS后高度计算不正确的问题。
