--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,6 +9,7 @@ ver 3.5.2
 * BUG: 提高上传图片JSON格式兼容性，防止某些时候因服务器输出额外的数据而导致JSON解析失败的问题。
 * BUG: 修改了在IE上某些情况下添加样式偏移的问题。
 * BUG: 修改了在IE下焦点在图片后面时按下TAB键JS报错的问题。
+* BUG: 修改了KE.util.setOpacity的opacity为2和20时结果相同的问题。
 
 ver 3.5.1 (2010-07-18)
 * BUG: 修改了表格左侧插入列时单元格移位的问题。
