--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -10,6 +10,7 @@ ver 3.5.2
 * BUG: 修改了在IE上某些情况下添加样式偏移的问题。
 * BUG: 修改了在IE下焦点在图片后面时按下TAB键JS报错的问题。
 * BUG: 修改了KE.util.setOpacity的opacity为2和20时结果相同的问题。
+* BUG: 修改了在IE6下高度小于0时出现脚本错误的问题。
 
 ver 3.5.1 (2010-07-18)
 * BUG: 修改了表格左侧插入列时单元格移位的问题。
