--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,7 +3,7 @@
 # KindEditor 变更记录
 #
 #######################################################################
-ver 3.5.2
+ver 3.5.2 (2010-12-02)
 * BUG: 修改了在IE下拖动调整大小不够顺畅的问题。
 * BUG: 徐改了在IE下JS的src为"kindeditor.js"时无法加载CSS文件的问题。
 * BUG: 提高上传图片JSON格式兼容性，防止某些时候因服务器输出额外的数据而导致JSON解析失败的问题。
