[trunk] improve fileManagerJson which supports GET params (Thanks Timon Lin)

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,9 +3,12 @@
 # KindEditor 变更记录
 #
 #######################################################################
+ver 3.5.3
+* 改善: fileManagerJson支持GET参数。
+
 ver 3.5.2 (2010-12-02)
 * BUG: 修改了在IE下拖动调整大小不够顺畅的问题。
-* BUG: 徐改了在IE下JS的src为"kindeditor.js"时无法加载CSS文件的问题。
+* BUG: 修改了在IE下JS的src为"kindeditor.js"时无法加载CSS文件的问题。
 * BUG: 提高上传图片JSON格式兼容性，防止某些时候因服务器输出额外的数据而导致JSON解析失败的问题。
 * BUG: 修改了在IE上某些情况下添加样式偏移的问题。
 * BUG: 修改了在IE下焦点在图片后面时按下TAB键JS报错的问题。
