--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -5,6 +5,7 @@
 #######################################################################
 ver 3.5.3
 * 改善: fileManagerJson支持GET参数。
+* 改善: 动态设置上传图片保存URL(save_url)，在不同深度的页面调用编辑器不会出错。
 * BUG: 修改了删除列时单元格偏移的问题。
 * BUG: 修改了在Firefox下点击dialog的按钮后没有按下去的效果的问题。
 * BUG: 修改了有些浏览器无法解析[\w-:]，需对“-”进行转义[\w\-:]的问题。
