--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,6 +9,7 @@ ver 3.5.3
 * BUG: 修改了删除列时单元格偏移的问题。
 * BUG: 修改了在Firefox下点击dialog的按钮后没有按下去的效果的问题。
 * BUG: 修改了有些浏览器无法解析[\w-:]，需对“-”进行转义[\w\-:]的问题。
+* BUG: 修改了执行KE.html后有时候全选整个编辑区域的问题。
 
 ver 3.5.2 (2010-12-02)
 * BUG: 修改了在IE下拖动调整大小不够顺畅的问题。
