--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -6,11 +6,11 @@
 ver 3.5.3
 * 改善: fileManagerJson支持GET参数。
 * 改善: 动态设置上传图片保存URL(save_url)，在不同深度的页面调用编辑器不会出错。
-* BUG: 修改了删除列时单元格偏移的问题。
-* BUG: 修改了在Firefox下点击dialog的按钮后没有按下去的效果的问题。
-* BUG: 修改了有些浏览器无法解析[\w-:]，需对“-”进行转义[\w\-:]的问题。
-* BUG: 修改了执行KE.html后有时候全选整个编辑区域的问题。
-* BUG: 修改了在Mac OS X的Firefox上无法显示右键菜单的问题。
+* bugfix: 删除列时单元格偏移。
+* bugfix: 在Firefox下点击dialog的按钮后没有按下去的效果。
+* bugfix: 有些浏览器无法解析[\w-:]，需对“-”进行转义[\w\-:]。
+* bugfix: 执行KE.html后有时候全选整个编辑区域。
+* bugfix: 在Mac OS X的Firefox上无法显示右键菜单。
 
 ver 3.5.2 (2010-12-02)
 * BUG: 修改了在IE下拖动调整大小不够顺畅的问题。
