[trunk] Fixed issue #153

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -4,6 +4,7 @@
 #
 #######################################################################
 ver 3.5.3
+* 增加: 新增useContextmenu属性，true时使用自定义右键菜单，false时屏蔽自定义右键菜单，默认值为true。
 * 改善: fileManagerJson支持GET参数。
 * 改善: 动态设置上传图片保存URL(save_url)，在不同深度的页面调用编辑器不会出错。
 * 改善: 当编辑器属性newlineTag为p时，粘贴纯文本换行使用p标签。
