[trunk] Fixed issue #150

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -8,6 +8,7 @@ ver 3.5.3
 * 改善: fileManagerJson支持GET参数。
 * 改善: 动态设置上传图片保存URL(save_url)，在不同深度的页面调用编辑器不会出错。
 * 改善: 当编辑器属性newlineTag为p时，粘贴纯文本换行使用p标签。
+* 改善: 编辑器id支持[a-z0-9_]以外的特殊字符。
 * BUG: 修改了删除列时单元格错位的问题。
 * BUG: 在Firefox下点击dialog的按钮后没有按下去的效果。
 * BUG: 有些浏览器无法解析[\w-:]，需对“-”进行转义[\w\-:]。
