--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -15,7 +15,7 @@ ver 3.5.3
 * 改善: 编辑器id支持[a-z0-9_]以外的特殊字符。
 * 改善: 上传图片按日期目录保存。
 * BUG: 修改了删除列时单元格错位的问题。
-* BUG: 在Firefox下点击dialog的按钮后没有按下去的效果。
+* BUG: 修改了在Firefox下点击dialog的按钮后没有按下去的效果的问题。
 * BUG: 有些浏览器无法解析[\w-:]，需对“-”进行转义[\w\-:]。
 * BUG: 执行KE.html后有时候全选整个编辑区域。
 * BUG: 在Mac OS X的Firefox上无法显示右键菜单。
