--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -20,6 +20,7 @@ ver 3.5.3
 * BUG: 执行KE.html后有时候全选整个编辑区域。
 * BUG: 在Mac OS X的Firefox上无法显示右键菜单。
 * BUG: script标签内的JavaScript代码字符串里包含HTML代码时，该字符串也被格式化。
+* BUG: 修改了ASP浏览图片程序无法进入子目录的问题。
 
 ver 3.5.2 (2010-12-02)
 * BUG: 修改了在IE下拖动调整大小不够顺畅的问题。
