[trunk] Fixed issue #138,#133, Added KE.blur(id) function

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -5,15 +5,20 @@
 #######################################################################
 ver 3.5.3
 * 增加: 新增useContextmenu属性，值为true时使用自定义右键菜单，false时屏蔽自定义右键菜单，默认值为true。
-* 增加: 新增afterChange属性(回调函数)，编辑器内容发生变化后执行被指定的回调函数。
+* 增加: 新增afterChange属性(回调函数)，编辑器内容发生变化后执行的函数。
 * 增加: 新增syncType属性，值为"auto"时每次修改时都会同步，"form"时提交form时同步，""时不会自动同步，默认值为"form"。
 * 增加: 新增KE.sync函数，与KE.util.setData函数功能相同。
+* 增加: 新增KE.blur函数，让编辑器失去焦点。
+* 增加: 新增tabIndex属性，可设置编辑器的tabindex。
+* 增加: 新增afterTab属性(回调函数)，按下TAB键后执行的函数，默认情况下插入4个空格。
 * 改变: 将autoSetDataMode的默认值改成false，默认情况下自动寻找所属form，并将KE.sync绑定到该form的submit事件里。
 * 改善: fileManagerJson支持GET参数。
 * 改善: 动态设置上传图片保存URL(save_url)，在不同深度的页面调用编辑器不会出错。
 * 改善: 当编辑器属性newlineTag为p时，粘贴纯文本换行使用p标签。
 * 改善: 编辑器id支持[a-z0-9_]以外的特殊字符。
 * 改善: 上传图片按日期目录保存。
+* 改善: 在IE6和IE7上浏览器原生菜单包含复制粘贴选项。
+* BUG: 在IE上通过showModalDialog显示编辑器时无法输入内容。
 * BUG: 修改了删除列时单元格错位的问题。
 * BUG: 修改了在Firefox下点击dialog的按钮后没有按下去的效果的问题。
 * BUG: 有些浏览器无法解析[\w-:]，需对“-”进行转义[\w\-:]。
@@ -21,6 +26,7 @@ ver 3.5.3
 * BUG: 在Mac OS X的Firefox上无法显示右键菜单。
 * BUG: script标签内的JavaScript代码字符串里包含HTML代码时，该字符串也被格式化。
 * BUG: 修改了ASP浏览图片程序无法进入子目录的问题。
+* BUG: 修改了通过TAB键移动焦点时焦点移动到工具栏图标上的问题。
 
 ver 3.5.2 (2010-12-02)
 * BUG: 修改了在IE下拖动调整大小不够顺畅的问题。
