[trunk] Fixed issue #140: compatible with IE9

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,6 +3,9 @@
 # KindEditor 变更记录
 #
 #######################################################################
+ver 3.5.4
+* 改善: 直接兼容IE9。
+
 ver 3.5.3 (2011-04-09)
 * 增加: 新增useContextmenu属性，值为true时使用自定义右键菜单，false时屏蔽自定义右键菜单，默认值为true。
 * 增加: 新增syncType属性，值为"auto"时每次修改时都会同步，"form"时提交form时同步，""时不会自动同步，默认值为"form"。
