--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -6,6 +6,7 @@
 ver 3.5.4
 * 改善: 直接兼容IE9。
 * BUG: 修改了在源代码模式下输入JS代码后切换到可视化模式时会执行JS代码的问题。
+* BUG: 在IE上编辑区域里的选中select控件时出现JS错误的问题。
 
 ver 3.5.3 (2011-04-09)
 * 增加: 新增useContextmenu属性，值为true时使用自定义右键菜单，false时屏蔽自定义右键菜单，默认值为true。
