[trunk] Modified changelog

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,7 +3,7 @@
 # KindEditor 变更记录
 #
 #######################################################################
-ver 3.5.4
+ver 3.5.4 (2011-05-01)
 * 改善: 直接兼容IE9。
 * BUG: 修改了在源代码模式下输入JS代码后切换到可视化模式时会执行JS代码的问题。
 * BUG: 修改了在IE上编辑区域里的选中select控件时出现JS错误的问题。
