--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,6 +3,9 @@
 # KindEditor 变更记录
 #
 #######################################################################
+ver 3.5.5
+* 改善: 插入图片时不设置border="0"属性。
+
 ver 3.5.4 (2011-05-01)
 * 改善: 直接兼容IE9。
 * BUG: 修改了在源代码模式下输入JS代码后切换到可视化模式时会执行JS代码的问题。
