[trunk] Modified changelog

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -7,6 +7,7 @@ ver 3.5.5
 * 改善: 插入图片时不设置border="0"属性。
 * BUG: 修改了在IE9上上传图片后原来的内容全部消失的问题。
 * BUG: 修改了在FF4上有时候无法插入图片的问题。
+* BUG: 修改了在IE6上插入图片后、在图片前出现一个空格的问题。
 
 ver 3.5.4 (2011-05-01)
 * 改善: 直接兼容IE9。
