--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -6,6 +6,7 @@
 ver 3.5.5
 * 改善: 改进输入框和按钮的外观。
 * 改善: 打开dialog后自动选中第一个输入框。
+* 改善: 用CSS实现dialog的阴影。
 * 改善: 插入图片时不设置border="0"属性。
 * BUG: 修改了在IE9上上传图片后原来的内容全部消失的问题。
 * BUG: 修改了在FF4上有时候无法插入图片的问题。
