[trunk] add preview plugin, improve code

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,7 +3,8 @@
 # KindEditor 变更记录
 #
 #######################################################################
-ver 3.5.5
+ver 3.6
+* 增加: 新增预览功能。
 * 改善: 改进输入框和按钮的外观。
 * 改善: 打开dialog后自动选中第一个输入框。
 * 改善: 用CSS实现dialog的阴影。
