--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -4,7 +4,8 @@
 #
 #######################################################################
 ver 3.6
-* 增加: 新增预览功能。
+* 增加: 新增预览(preview)功能。
+* 增加: 新增新建(newdoc)功能。
 * 改善: 改进输入框和按钮的外观。
 * 改善: 打开dialog后自动选中第一个输入框。
 * 改善: 用CSS实现dialog的阴影。
