[trunk] modified changelog

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,9 +3,7 @@
 # KindEditor 变更记录
 #
 #######################################################################
-ver 3.6
-* 增加: 新增预览(preview)功能。
-* 增加: 新增新建(newdoc)功能。
+ver 3.5.5 (2011-05-20)
 * 增加: 新增单元格编辑功能。
 * 改善: 改进输入框和按钮的外观。
 * 改善: 打开dialog后自动选中第一个输入框。
