--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -3,6 +3,10 @@
 # KindEditor 变更记录
 #
 #######################################################################
+ver 3.5.6
+* 增加: 新增afterResize属性(回调函数)，改变编辑器大小后执行。
+* BUG: 修改了在全屏模式下编辑器可以被拖动的问题。
+
 ver 3.5.5 (2011-05-22)
 * 增加: 新增单元格编辑功能。
 * 改善: 改进输入框和按钮的外观。
