--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -5,6 +5,7 @@
 #######################################################################
 ver 3.5.6
 * 增加: 新增afterResize属性(回调函数)，改变编辑器大小后执行。
+* 改善: 修改了工具栏受全局a:hover的影响的问题。
 * BUG: 修改了在全屏模式下编辑器可以被拖动的问题。
 
 ver 3.5.5 (2011-05-22)
