[trunk] Fixed issue #173

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -5,6 +5,7 @@
 #######################################################################
 ver 3.5.6
 * 增加: 新增afterDrag属性(回调函数)，拖动改变编辑器大小后执行。
+* 增加: 新增afterUpload属性(回调函数)，上传成功后执行。
 * 改善: 修改了工具栏受全局a:hover的影响的问题。
 * BUG: 修改了在全屏模式下编辑器可以被拖动的问题。
 
