[trunk] Fixed issue #176

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -6,8 +6,9 @@
 ver 3.5.6
 * 增加: 新增afterDrag属性(回调函数)，拖动改变编辑器大小后执行。
 * 增加: 新增afterUpload属性(回调函数)，上传成功后执行。
-* 改善: 修改了工具栏受全局a:hover的影响的问题。
-* BUG: 修改了在全屏模式下编辑器可以被拖动的问题。
+* 改善: 工具栏受全局a:hover的影响。
+* BUG: 在全屏模式下编辑器可以被拖动。
+* BUG: [ASP]不改变文件名并上传中文名文件时文件名出现乱码。
 
 ver 3.5.5 (2011-05-22)
 * 增加: 新增单元格编辑功能。
