[trunk] Fixed bug where cannot remove format in IE9

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -9,6 +9,8 @@ ver 3.5.6
 * 改善: 工具栏受全局a:hover的影响。
 * BUG: 在全屏模式下编辑器可以被拖动。
 * BUG: [ASP]不改变文件名并上传中文名文件时文件名出现乱码。
+* BUG: [IE9]删除格式功能有时候不起作用。
+* BUG: [IE9]添加样式时有时候报错。
 
 ver 3.5.5 (2011-05-22)
 * 增加: 新增单元格编辑功能。
