[trunk] Fixed bug where KE.dialog

--- a/docs/changelog.txt
+++ b/docs/changelog.txt
@@ -6,8 +6,8 @@
 ver 3.5.6
 * 增加: 新增afterDrag属性(回调函数)，拖动改变编辑器大小后执行。
 * 增加: 新增afterUpload属性(回调函数)，上传成功后执行。
-* 改善: 工具栏受全局a:hover的影响。
-* BUG: 在全屏模式下编辑器可以被拖动。
+* BUG: 修复了工具栏受全局a:hover的影响的问题。
+* BUG: 修复了在全屏模式下编辑器可以被拖动的问题。
 * BUG: [ASP]不改变文件名并上传中文名文件时文件名出现乱码。
 * BUG: [IE9]删除格式功能有时候不起作用。
 * BUG: [IE9]添加样式时有时候报错。
