[trunk] fixed issue #219

--- a/changelog.txt
+++ b/changelog.txt
@@ -8,12 +8,13 @@ ver 4.0.1
 * 改善: image插件，通过editor.plugin.imageDialog()可以单独调用图片弹出框。
 * 改善: filemanager插件，Ajax请求时显示Loading效果。
 * 改善: 工具栏图标改成png8格式。
-* BUG: 修复了不能用style的width和height设置编辑器大小的问题。
-* BUG: 修复了从MS WORD里面拷贝过来的表格，表格的颜色会丢掉的问题。
-* BUG: [IE] 修复了关闭弹出层后光标自动跳转到顶部的问题。
-* BUG: 修复了添加链接时有时候出现__kindeditor_temp_url__的问题。
-* BUG: [IE] 修复了点击工具栏后，编辑区域失去选中状态的问题。
-* BUG: 修复了网速比较慢的时候，连续点击一个图标，弹出多个弹出框的问题。
+* Bugfix: 不能用style的width和height设置编辑器大小。
+* Bugfix: 从MS WORD里面拷贝过来的表格，表格的颜色会丢掉。
+* Bugfix: [IE] 关闭弹出层后光标自动跳转到顶部。
+* Bugfix: 添加链接时有时候出现__kindeditor_temp_url__。
+* Bugfix: [IE] 点击工具栏后，编辑区域失去选中状态。
+* Bugfix: 网速比较慢的时候，连续点击一个图标，弹出多个弹出框。
+* Bugfix: 删除格式时不能删除段落缩进属性。
 
 ver 4.0 (2011-09-26)
 * 新增: 锚点功能。
@@ -85,3 +86,334 @@ ver 4.0 alpha (2011-08-16)
 * BUG: 修复了页面底部显示右键菜单被挡住的问题。
 * BUG: 修复了在HTML里存在不规则属性("="")时过滤不掉其它属性的问题。
 * BUG: 修复了处理被合并过的单元格时发生错误的问题。
+
+ver 3.5.6 (2011-10-04)
+* 增加: 新增afterDrag属性(回调函数)，拖动改变编辑器大小后执行。
+* 增加: 新增afterUpload属性(回调函数)，上传成功后执行。
+* BUG: 修复了工具栏受全局a:hover的影响的问题。
+* BUG: 修复了在全屏模式下编辑器可以被拖动的问题。
+* BUG: [ASP]不改变文件名并上传中文名文件时文件名出现乱码。
+* BUG: [IE9]删除格式功能有时候不起作用。
+* BUG: [IE9]添加样式时有时候报错。
+
+ver 3.5.5 (2011-05-22)
+* 增加: 新增单元格编辑功能。
+* 改善: 改进输入框和按钮的外观。
+* 改善: 打开dialog后自动选中第一个输入框。
+* 改善: 用CSS实现dialog的阴影。
+* 改善: 插入图片时不设置border="0"属性。
+* BUG: 修改了在IE9上上传图片后原来的内容全部消失的问题。
+* BUG: 修改了在FF4上有时候无法插入图片的问题。
+* BUG: 修改了在IE6上插入图片后，在图片前出现一个空格的问题。
+* BUG: 修改了在IE上使用清除格式功能来删除一段加粗的文字时发生JS错误的问题。(只有压缩后的min有这个问题)
+
+ver 3.5.4 (2011-05-01)
+* 改善: 直接兼容IE9。
+* BUG: 修改了在源代码模式下输入JS代码后切换到可视化模式时会执行JS代码的问题。
+* BUG: 修改了在IE上编辑区域里的选中select控件时出现JS错误的问题。
+* BUG: 修改了在IE上通过KE.insertHtml函数输入<mp3>URL</mp3>时丢失标签的问题。
+* BUG: 修改了在一个页面调用多个编辑器时重复加载相同CSS的问题。
+* BUG: 修改了在一个页面包含多个kindeditor.js时无法打开dialog的问题。
+* BUG: 移除了工具栏里的两对多余的tr标签。
+
+ver 3.5.3 (2011-04-09)
+* 增加: 新增useContextmenu属性，值为true时使用自定义右键菜单，false时屏蔽自定义右键菜单，默认值为true。
+* 增加: 新增syncType属性，值为"auto"时每次修改时都会同步，"form"时提交form时同步，""时不会自动同步，默认值为"form"。
+* 增加: 新增tabIndex属性，可设置编辑器的tabindex。
+* 增加: 新增afterChange属性(回调函数)，编辑器内容发生变化后执行的函数。
+* 增加: 新增afterTab属性(回调函数)，按下TAB键后执行的函数，默认情况下插入4个空格。
+* 增加: 新增afterFocus属性(回调函数)，编辑器获得焦点(onfocus)时执行的函数。
+* 增加: 新增afterBlur属性(回调函数)，编辑器失去焦点(onblur)时执行的函数。
+* 增加: 新增KE.sync函数，将编辑器数据设回到原来的textarea里，与KE.util.setData函数功能相同。
+* 增加: 新增KE.blur函数，让编辑器失去焦点。
+* 改变: 将autoSetDataMode的默认值改成false，默认情况下自动寻找所属form，并将KE.sync绑定到该form的submit事件里。
+* 改善: fileManagerJson支持GET参数。
+* 改善: 动态设置上传图片保存URL(save_url)，在不同深度的页面调用编辑器不会出错。
+* 改善: 当编辑器属性newlineTag为p时，粘贴纯文本换行使用p标签。
+* 改善: 编辑器id支持[a-z0-9_]以外的特殊字符。
+* 改善: 上传图片按日期目录保存。
+* 改善: 在IE6和IE7上浏览器原生菜单包含复制粘贴选项。
+* BUG: 在IE上通过showModalDialog显示编辑器时无法输入内容。
+* BUG: 修改了删除列时单元格错位的问题。
+* BUG: 修改了在Firefox下点击dialog的按钮后没有按下去的效果的问题。
+* BUG: 有些浏览器无法解析[\w-:]，需对“-”进行转义[\w\-:]。
+* BUG: 执行KE.html后有时候全选整个编辑区域。
+* BUG: 在Mac OS X的Firefox上无法显示右键菜单。
+* BUG: script标签内的JavaScript代码字符串里包含HTML代码时，该字符串也被格式化。
+* BUG: 修改了ASP浏览图片程序无法进入子目录的问题。
+* BUG: 修改了通过TAB键移动焦点时焦点移动到工具栏图标上的问题。
+
+ver 3.5.2 (2010-12-02)
+* BUG: 修改了在IE下拖动调整大小不够顺畅的问题。
+* BUG: 修改了在IE下JS的src为"kindeditor.js"时无法加载CSS文件的问题。
+* BUG: 提高上传图片JSON格式兼容性，防止某些时候因服务器输出额外的数据而导致JSON解析失败的问题。
+* BUG: 修改了在IE上某些情况下添加样式偏移的问题。
+* BUG: 修改了在IE下焦点在图片后面时按下TAB键JS报错的问题。
+* BUG: 修改了KE.util.setOpacity的opacity为2和20时结果相同的问题。
+* BUG: 修改了在IE6下高度小于0时出现脚本错误的问题。
+
+ver 3.5.1 (2010-07-18)
+* BUG: 修改了表格左侧插入列时单元格移位的问题。
+* BUG: 修改了在Firefox上设置全局CSS后高度计算不正确的问题。
+* BUG: 修改了ASP上传程序无法上传大写扩展名文件的问题。
+* BUG: 修改了在Firefox上调用KE.html函数在某些情况下JS报错的问题。
+* BUG: 修改了在IE6、IE7上只读模式下不显示内容的问题。
+* BUG: 修改了JSP演示程序提交中文数据后出现乱码的问题。
+* BUG: 修改了通过insertHtml插入HTML时URL自动变成绝对域名的问题。
+* BUG: 修改了在IE上用BR换行时回车换行自动选中下面内容的问题。
+* BUG: 修改了设置表格背景颜色后不能取消颜色的问题。
+
+ver 3.5 (2010-06-20)
+* 增加: 增加了表格编辑功能。
+* 增加: 引入了多国语言机制。
+* 增加: 标题、字体、文字大小、颜色可以反映当前状态。
+* 增加: 右键菜单支持图标和分割线。
+* 增加: 表情功能增加分页和预览。
+* 增加: 增加了弹出框阴影效果。
+* 增加: 增加了新接口。(KE.html,KE.text,KE.selectedHtml,KE.insertHtml,KE.appendHtml,KE.isEmpty等)
+* 改善: 编辑器底部显示向下拖动指示图标。
+* 改善: 点击编辑器外的页面其它部位时关闭菜单。
+* 改善: 移除编辑器时将编辑器内容设置到原来的textarea。
+* 改善: 从外部粘贴内容时自动将font转换成span标签。
+* 改善: ASP.NET程序改成ashx，使用时不需要编译。
+* BUG: 改善了文章内容比较多时速度比较慢的问题。
+* BUG: 修改了在IE上选中图片或表格后无法用backspace键删除的问题。
+* BUG: 修改了在Firefox上全屏后浏览器一直处于加载状态的问题。
+* BUG: 修改了在非IE上DOMContentLoaded事件不起作用的问题。
+* BUG: 修改了删除编辑器时没有销毁事件的问题。
+* BUG: 修改了设置成无颜色时其它样式也被删除的问题。
+* BUG: 修改了拖动时拖到浏览器外面放开鼠标后会粘住的问题。
+* BUG: 修改了在Firefox上pre标签自动生成br标签的问题。
+* BUG: 修改了在IE6上用KE.cmd.wrap方法设置class属性后没有效果的问题。
+* BUG: 修改了在P标签内没选中内容时无法插入超级链接的问题。
+* BUG: 修改了使用快捷键加粗体、斜体、下划线时没有同步的问题。
+
+ver 3.4.4 (2010-06-01)
+* BUG: 修改了在IE上焦点自动移动到编辑区域的问题。
+* BUG: 修改了在IE上打开类型无法修改成当前窗口的问题。
+* BUG: 修改了全选后无法取消超级链接的问题。
+* BUG: 修改了切换代码模式时编辑器轻微抖动的问题。
+* BUG: 修改了在IE上切换代码模式时有时候不出现滚动条的问题。
+* BUG: 修改了在Chrome 5.0上反复切换代码模式有时候出现崩溃页面的问题。
+* 改善: 显示菜单后再点将关闭此菜单。
+
+ver 3.4.3 (2010-05-26)
+* BUG: 修改了重复编辑超级链接时每次都添加&amp;的问题。
+* BUG: 修改了在IE上右键菜单没有复制、剪切项目的问题。
+* BUG: 修改了在IE上没有格式化<font color=#000>代码的问题。
+* BUG: 修改了PHP上传程序日期格式不正确的问题。
+* BUG: 修改了在IE上代码模式下全屏本地URL自动变成绝对URL的问题。
+* BUG: 修改了在代码模式下KE.util.setFullHtml函数不显示HTML内容的问题。
+* BUG: 修改了在MARQUEE元素里回车换行出现JS错误的问题。
+* BUG: 修改了通过菜单剪切、粘贴时不触发KE.event.input事件的问题。
+* BUG: 修改了在IE上焦点离开编辑区域后没有记住最后的range位置的问题。
+* BUG: 修改了在源代码模式下undo/redo能看到临时HTML代码的问题。
+* BUG: 修改了在IE上输入的HTML开头是<script>时该代码被删掉的问题。
+* BUG: 修改了在IE上将<img>替换<hr>时有时候报错的问题。
+* BUG: 修改了在IE上编辑marquee元素里的图片和超级链接时报错的问题。
+* BUG: 修改了右键点击图片右边时有时候会弹出图片编辑菜单的问题。
+* BUG: 修改了script和style代码无法保留换行符的问题。
+* BUG: 修改了在非IE浏览器上换行使用p的时候最后一个p结尾还是有一个br的问题。
+* BUG: 修改了Webkit系列浏览器的textarea可拖动调整大小，聚焦时边框变成黄色的问题。
+* BUG: 修改了在IE上代码模式下有时候不会自动换行的问题。
+* BUG: 修改了在IE上new Function和iframe引起内存泄漏的问题。
+* 改变: 默认换行方式改成p换行。
+* 改善: 弹出框未指定任何按钮(yesButton, noButton, previewButton)时，不显示底部DIV。
+* 改善: 确定alert框后将焦点设置到输入错误的输入框。
+* 改善: 上传图片时如果返回的JSON格式有错误，提示友好信息。
+* 改善: 从Word粘贴功能严格过滤垃圾代码。
+* 改善: 编辑时同步更新原textarea里的HTML内容，不需要在提交前设置KE.util.setData。
+* 改善: 根据resizeMode配置显示不同的鼠标状态和小图标。
+* 改善: 按TAB键时插入4个&nbsp;。
+* 增加: 增加了afterDialogCreate属性，设置弹出dialog后执行的回调函数。
+* 增加: 增加了ASP.NET、ASP、JSP演示程序。
+* 增加: 增加了工具栏分割符号。
+* 删除: 删除了autoOnsubmit属性。
+
+ver 3.4.2 (2010-04-04)
+* 增加: 添加了KE.util.isEmpty函数，用于判断编辑器是否有可见内容。
+* 改善: 页面很小时弹出菜单的上下位置不变。
+* 改善: 插入超级链接未选中内容时插入URL文本。
+* 改善: 插入超级链接的打开类型为当前窗口时删除A标签的target属性。
+* BUG: 修改了在IE上HTML属性值里输入JS代码时格式出现错误的问题。
+* BUG: 修改了cssPath属性为空时加载首页的问题。
+* BUG: 修改了当浏览器出现滚动条并拖动调整大小时控制不住的问题。
+* BUG: 修改了embed代码丢失自定义属性的问题。
+* BUG: 修改了在IE上切换到代码模式后点击图标触发onbeforeunload事件的问题。
+* BUG: 修改了在Firefox上光标在图片旁边时点击鼠标右键，弹出右键菜单的问题。
+* BUG: 修改了在Firefox上无法修改/删除图片的超级链接的问题。
+* BUG: 修改了在Webkit上有时候无法添加/修改/删除图片的超级链接的问题。
+
+ver 3.4.1 (2010-02-25)
+* 添加了dialogAlignType属性，指定弹出窗口对齐方式。
+* 添加了imageUploadJson属性，可指定上传图片服务器端程序。
+* 添加了fileManagerJson属性，可指定浏览服务器文件的服务器端程序。
+* 修改了在IE上删除所有可见内容后留下P标记的问题。
+* 修改了拖动弹出窗口时可以拖出页面外的问题。
+* 修改了拖动弹出窗口时选中内容的问题。
+* 修改了在IE8上点击工具栏触发onbeforeunload事件的问题。
+* 修改了输入带冒号的标签时HTML格式出现错误的问题。
+* 修改了在Firefox上不选中超级连接时不能取消超级连接的问题。
+* 修改了当页面比较小时下拉菜单超出页面的问题。
+* 修改了在Webkit浏览器上不选中内容添加超级连接时插入__ke_temp_url__的问题。
+* beforeCreate、afterCreate等回调函数添加了id参数。
+* 改善了URL格式化规则，urlType参数默认为空，当urlType为空时不修改URL。
+* 只要KE.plugin里有定义就执行插件的init处理。
+* cssPath参数可指定多个CSS文件。
+* KE.event.ctrl函数可以直接传入keyCode数字。
+* urlType为relative时省略当前路径标识符。
+* 图片上传程序返回JSON数据，文件名改成upload_json.php。
+* 上传图片过程中显示加载动画。
+* 标题格式增加了正文。
+* 更换了默认风格。
+
+ver 3.4 (2009-12-19)
+* 添加了图片修改/删除功能。
+* 添加了超级连接修改/删除功能。
+* 添加了浏览服务器文件的功能（PHP）。
+* 添加了URL格式化功能。
+* 添加了afterCreate和beforeCreate回调函数。
+* 添加了textarea的name属性支持，没指定id时寻找name。
+* htmlTags属性指定style时，忽略[.]开头的属性，允许任何样式。
+* 改善了弹出框，支持多个窗，根据浏览器窗口居中，加载时显示[加载中]动画。
+* 改善了回车换行，通过参数可设置BR或P换行，默认BR换行。
+* 改善了插入表情功能，显示表情图片时只加载一次图片。
+* 在WEBKIT系列浏览器上点击图片后自动选中。
+* 编辑器最大化之后不允许拖动修改大小。
+* 编辑器的CSS文件可以手动包含。
+* 编辑器所用到的图标全部在CSS文件里定义。
+* skins里的文件分别放在不同目录里。
+* 下拉菜单根据文字内容自动调整宽度。
+* 默认不开启过滤模式。
+* 修改了Firefox上Flash和多媒体不显示的问题（用图片表示）。
+* 修改了非IE浏览器选中element元素时取得错误range的问题。
+* 修改了非IE浏览器无法选中element元素的问题。
+* 修改了清除格式后有时候变成一行的问题。
+* 修改了IE6怪异模式下切换模式高度有变化的问题。
+* 修改了Firefox 2上不能使用的问题。
+* 修改了在Webkit上高度比较小的时候底部出现空白的问题。
+* 修改了在非IE浏览器上上传失败后重新刷新页面的问题。
+* 删除了[插入层]、[日期]、[时间]、[预览]、[插入特殊字符]功能。
+* 还有很多代码优化。
+
+ver 3.3.1 (2009-09-20)
+* 修改了删除文本格式后出现垃圾代码的问题。
+* 删除了KE.util里的没有用到的函数。
+* 修改了在IE上多个编辑器同时显示时，点击全屏另外一个编辑器自动变成最大化的问题。
+* 修改了在Firefox上缩进操作后产生的代码默认被过滤的问题。
+* 修改了删除编辑器后没有清除container的问题。
+* 添加了TAB键缩进功能。
+* 上传图片时重命名文件名。
+* 拖拽编辑器调整大小时不再隐藏编辑器内容。
+* 修改了几个演示程序，优化了细节。
+
+ver 3.3 (2009-09-06)
+* 提高了加载速度。DOM加载完成后立即创建编辑器，以前用了window onload事件。
+* 改善了HTML格式化性能。增加KE.format，替代原来的outputHtml和htmlToXhtml。
+* 删除了siteDomains属性，link和当前域名相同时自动改成相对域名。
+* 修改了在IE上有不规范HTML标签时出现重复内容的问题。
+* 修改了在Fifefox粘贴Word文档时头部出现垃圾代码的问题。
+* 编辑器宽度设定支持百分比，不设置大小时默认取得textarea的大小。
+* 整理了插入表格代码。
+* 修改了特殊字符、插入表格等功能受YUI全局CSS影响的问题。
+* 修改了在Firefox上按F5刷新时JS报错的问题。
+* 修改了在Firefox上有时候不能删除内容的问题。
+* 修改了代码模式下输入的内容没有被格式化的问题。
+
+ver 3.2.1 (2009-08-09)
+* 修改了在IE上行尾插入图片后光标无法移动到图片后位置的问题。
+* 修改了在IE上内容为空时连续插入非文字元素出现脚本错误的问题。
+* 修改了原代码模式下输入<textarea></textarea>后来回切换模式时发生错误的问题。
+* 修改了在IE上<br>换行后改变字体时光标移动到上一行的问题。
+* 修改了在IE上删除文本格式时选中位置有时候会偏移的问题。
+* 修改了range在text range的最后位置时wrap方法不正常的问题。
+* getPureData方法过滤&nbsp;。
+* 修改了htmlTags的默认值。
+* 修改了在WEBKIT系列浏览器上有滚动条时下拉框定位不正确的问题。
+
+ver 3.2 (2009-07-12)
+* 工具栏图标可以反映选中状态。
+* 用虚线显示p,div,ol等标记。
+* font标记全部改成span，文字大小统一使用px单位。
+* htmlTags属性一次可定义多个标记。
+* Firefox等浏览器上颜色可以输出统一的十六进制颜色。
+* filterMode为false的时候输出XHTML，并支持siteDomain设定。
+* 修改了过滤一些代码后HTML代码有偏移的问题。
+* 修复了在IE上点击工具栏图标时失去焦点的问题。
+* 编辑区域的body里添加了ke-content class。
+* 添加了后退/撤销快捷键(Ctrl+Z和Ctrl+Y)。
+* 改善了默认风格。
+* 包含很多细小的代码优化。
+* 增加了宽度和高度属性。
+
+ver 3.1.2 (2009-04-15)
+* 修改了IE上拖动选择图片后添加超级链接发生错误的问题。
+* 修改了Flash、多媒体、图片的验证规则，支持GET参数。
+
+ver 3.1.1 (2009-03-09)
+* 修改了设置siteDomains无效的问题。
+* 修改了例子当中的一些文字错误。
+
+ver 3.1 (2009-03-01)
+* 合并了javascript文件，删除了build目录，只保留kindeditor.js非压缩格式。
+* 修改了HTML过滤功能，通过htmlTags属性可以指定HTML标记和属性。
+* 修改了有时候超级连接出现__ke_temp_url__的问题。
+* 修改了KE.util.selection()里==符号写成=的问题。
+* 修改了连续输入空格变成特殊字符的问题。
+* 初期显示编辑器时焦点不再默认移到编辑区域。
+
+ver 3.0.1 (2009-02-10)
+* 修改了包含prototype、mootools等类库时发生冲突的问题。
+* 修改了在非IE浏览器下outputHtml()过滤正常代码的问题。
+* 改善了超级连接功能(link plugin)。
+* 添加了KE.lang['invalidUrl']语言定义。
+* 修改了在IE6下重复加载工具栏图标的问题。
+* 修改了在Firefox 2.0下发生错误的问题。
+* 修改了指定多个siteDomains参数时无效的问题。
+* 添加了禁止拖动工具栏图标的处理。
+
+ver 3.0 (2009-01-24)
+* 修改了outputHtml()若干问题。
+* 修改了position: relative下无法设置全屏的问题。
+* 修改了HTML4.0下非IE浏览器页面变形的问题。
+* 修改了全屏下弹出窗口后可以点击编辑区域的问题。
+
+ver 3.0 beta 4 (2009-01-18)
+* 修改了IE无法对齐的问题。
+* 调整了IE换行规则。
+
+ver 3.0 beta 3 (2009-01-18)
+* 加强了undo/redo。
+* 增加了HTML代码过滤功能，并通过filterMode可以选择是否过滤。
+* 修改了粘贴纯文本时解析HTML代码的问题。
+* 修改了skinsPath和pluginsPath属性无法自定义的问题。
+* 增加了siteDomains属性。
+* 删除了plugin-mini.js。
+
+ver 3.0 beta 2 (2009-01-01)
+* 修改了PHP上传图片时标题不正确的问题。
+* 属性hideBottomMode改成resizeMode。
+* 修改了编辑器外观受YUI CSS影响的问题。
+* 修改了IE浏览器上编辑时有时候HTML显示不全的问题。
+* 修改了部分浏览器插入link时发生js错误的问题。
+* 自定义ICON可以定义其它外部图片。
+* 初期显示时不再插入<p><br /></p>。
+* 精简了部分代码。
+* 增加了几个demo。
+
+ver 3.0 beta (2008-12-09)
+* 修改了Firefox3下第一次选择标题有错误的问题。
+* 修改了切换到HTML模式时编辑器会抖动的问题。
+* 修改了插入表情以后路径有错误无法显示的问题。
+* 修改了TinyMCE风格的时间icon坐标不正确的问题。
+* 修改了移动dialog时编辑器文字移动结束后也不显示的问题。
+* 修改了在iframe里无法使用的问题。
+* 修改了目录名为kindeditor时getScriptPath取路径不正确的问题。
+* 修改了增加缩进和减少缩进两个图标的提示文本。
+* 修改了IE下没有指定DOCTYPE时显示有问题。
+* 代码统一用4个空格缩进。
+* 增加了几个demo。
+* plugin-all.js里的中文提取到zh_CN.js。
+
+ver 3.0 alpha (2008-11-30)
+* 初期完成。
