[trunk] bugfix: issue #246

--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,7 @@ ver 4.0.1
 * Bugfix: [IE] 点击工具栏后，编辑区域失去选中状态。
 * Bugfix: 网速比较慢的时候，连续点击一个图标，弹出多个弹出框。
 * Bugfix: 删除格式时不能删除段落缩进属性。
+* Bugfix: 拖拉改变Flash大小，点击源代码再点回来，Flash长宽自动恢复成预设值。
 
 ver 4.0 (2011-09-26)
 * 新增: 锚点功能。
