[trunk] update changelog

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,7 @@
 #
 #######################################################################
 
-ver 4.0.1
+ver 4.0.1 (2011-10-07)
 * 改善: image插件，通过editor.plugin.imageDialog()可以单独调用图片弹出框。
 * 改善: filemanager插件，Ajax请求时显示Loading效果。
 * 改善: 工具栏图标改成png8格式。
