--- a/changelog.txt
+++ b/changelog.txt
@@ -11,6 +11,7 @@ ver 4.0.2
 * Bugfix: [IE] 当编辑器为空时，输入任意字符，然后点击表单的重置按钮，再点击页面空白处，出现JS错误。
 * Bugfix: [IE8] 设置X-UA-Compatible=IE7，有时候无法加载编辑器。
 * Bugfix: a标签同时有name和href属性时，丢失name以外的属性。
+* Bugfix: 连续调用多个ready函数时，第4个ready无法执行。
 
 ver 4.0.1 (2011-10-07)
 * 改善: image插件，通过editor.plugin.imageDialog()可以单独调用图片弹出框。
