--- a/changelog.txt
+++ b/changelog.txt
@@ -14,6 +14,7 @@ ver 4.0.2
 * Bugfix: 连续调用多个ready函数时，第4个ready无法执行。
 * Bugfix: 插入多媒体后，右键点击不会弹出菜单。
 * Bugfix: 启用纯文本黏贴后，段落首尾都会出现>符号。
+* Bugfix: [IE] 点击标题、字体、文字大小，编辑区域失去选中状态。
 
 ver 4.0.1 (2011-10-07)
 * 改善: image插件，通过editor.plugin.imageDialog()可以单独调用图片弹出框。
