--- a/changelog.txt
+++ b/changelog.txt
@@ -15,6 +15,7 @@ ver 4.0.2
 * Bugfix: 插入多媒体后，右键点击不会弹出菜单。
 * Bugfix: 启用纯文本黏贴后，段落首尾都会出现>符号。
 * Bugfix: [IE] 点击标题、字体、文字大小，编辑区域失去选中状态。
+* Bugfix: [FF,WEBKIT] 连续换行几次，切换到源代码，再切换到可视化模式，没有换行效果。
 
 ver 4.0.1 (2011-10-07)
 * 改善: image插件，通过editor.plugin.imageDialog()可以单独调用图片弹出框。
