--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,7 @@ ver 4.0.2
 * Bugfix: [WEBKIT] 选择几个文字，点击上标或下标功能，上下标格式不会被应用。
 * Bugfix: 加载编辑器后残留多余的div标签。
 * Bugfix: 页面上包含跨域iframe的时候JS报错。
+* Bugfix: 页面刷新后，与第一次访问加载的编译器高度不一致。
 
 ver 4.0.1 (2011-10-07)
 * 改善: image插件，通过editor.plugin.imageDialog()可以单独调用图片弹出框。
