--- a/changelog.txt
+++ b/changelog.txt
@@ -20,6 +20,8 @@ ver 4.0.2
 * Bugfix: 加载编辑器后残留多余的div标签。
 * Bugfix: 页面上包含跨域iframe的时候JS报错。
 * Bugfix: 页面刷新后，与第一次访问加载的编译器高度不一致。
+* Bugfix: [IE6] 弹出层无法遮住selectbox。
+* Bugfix: [FF] 提交后退后，编辑器数据不保存。
 
 ver 4.0.1 (2011-10-07)
 * 改善: image插件，通过editor.plugin.imageDialog()可以单独调用图片弹出框。
