--- a/changelog.txt
+++ b/changelog.txt
@@ -25,6 +25,7 @@ ver 4.0.2
 * Bugfix: [FF] 提交后退后，编辑器数据不保存。
 * Bugfix: 选择粗体，取消粗体再应用粗体（即点两下粗体），则发现粗体、倾斜、下划线功能失效，无法选择。
 * Bugfix: [WEBKIT] 置入Issue 269中的HTML，全选，点击删除格式，又出现一个图片，图片变为两个。
+* Bugfix: 与MooTools类库有冲突。
 
 ver 4.0.1 (2011-10-07)
 * 改善: image插件，通过editor.plugin.imageDialog()可以单独调用图片弹出框。
