[trunk] update changlog

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,7 @@
 #
 #######################################################################
 
-ver 4.0.2
+ver 4.0.2 (2011-10-30)
 * 新增: 上传按钮新增afterError回调函数，可定制JSON错误。
 * Bugfix: [FF] 在页面上设置iframe {overflow:hidden;} ，编辑区域不出现滚动条。
 * Bugfix: 浏览服务器插件，文件名很长的时候会换行。
