--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,8 @@
 # KindEditor 变更记录
 #
 #######################################################################
+ver 4.0.3
+* Bugfix: [IE] 存在menu全局变量，可能发生冲突。
 
 ver 4.0.2 (2011-10-30)
 * 新增: 上传按钮新增afterError回调函数，可定制JSON错误。
