--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@
 #
 #######################################################################
 ver 4.0.3
+* Bugfix: [IE] 残留range.dump()调试代码，导致粘贴时报错。
 * Bugfix: [IE] 存在menu全局变量，可能发生冲突。
 * Bugfix: [IE] 单元格里没有内容时显示不正常。
 
