--- a/changelog.txt
+++ b/changelog.txt
@@ -3,7 +3,7 @@
 # KindEditor 变更记录
 #
 #######################################################################
-ver 4.0.3
+ver 4.0.3 (2011-11-04)
 * Bugfix: [IE] 残留range.dump()调试代码，导致粘贴时报错。
 * Bugfix: [IE] 存在menu全局变量，可能发生冲突。
 * Bugfix: [IE] 单元格里没有内容时显示不正常。
