--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,9 @@
 # KindEditor 变更记录
 #
 #######################################################################
+ver 4.0.4
+* Bugfix: 浏览器使用有些插件时，上传文件提示不正确。
+
 ver 4.0.3 (2011-11-04)
 * Bugfix: [IE] 残留range.dump()调试代码，导致粘贴时报错。
 * Bugfix: [IE] 存在menu全局变量，可能发生冲突。
