--- a/changelog.txt
+++ b/changelog.txt
@@ -10,6 +10,7 @@ ver 4.0.4
 * Bugfix: 设置了参数filterMode:true，分页符就会丢失样式。
 * Bugfix: [FF] 撤销全屏后页面会滚动到顶部。
 * Bugfix: [ASP] demo.asp没有指定编码，导致提交后HTML出现乱码。
+* Bugfix: 单独调用上传按钮时，无法与旁边输入框对齐。
 
 ver 4.0.3 (2011-11-04)
 * Bugfix: [IE] 残留range.dump()调试代码，导致粘贴时报错。
