[trunk] show upload error in dialog

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
 #######################################################################
 ver 4.0.4
 * 改善: 上传文件时显示上传中提示。
+* 改善: JSON解析失败时，通过弹出层显示服务器返回的HTML页面。
 * Bugfix: 浏览器使用有些插件时，上传文件提示不正确。
 * Bugfix: 单独调用图片功能时，点击重置大小图标报错。
 * Bugfix: 设置了参数filterMode:true，分页符就会丢失样式。
