--- a/changelog.txt
+++ b/changelog.txt
@@ -17,6 +17,7 @@ ver 4.0.4
 * Bugfix: [IE] 插入<input value="abc&quot;def"/>，会自动变为 <input value="abc"def"/>。
 * Bugfix: [WEBKIT] 点击粗体后丢失光标。
 * Bugfix: [OPERA] 切换到代码模式后不显示部分工具栏图标。
+* Bugfix: del标签被定义在块级元素里，导致格式化HTML时自动换行。
 
 ver 4.0.3 (2011-11-04)
 * Bugfix: [IE] 残留range.dump()调试代码，导致粘贴时报错。
