[trunk] add arabic translation by daif alotaibi (http://daif.net/)

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@
 #
 #######################################################################
 ver 4.0.4
+* 新增: 阿拉伯语语言包。
 * 改善: 上传文件时显示上传中提示。
 * 改善: JSON解析失败时，通过弹出层显示服务器返回的HTML页面。
 * Bugfix: 浏览器使用有些插件时，上传文件提示不正确。
