--- a/changelog.txt
+++ b/changelog.txt
@@ -22,6 +22,7 @@ ver 4.0.4
 * Bugfix: del标签被定义在块级元素里，导致格式化HTML时自动换行。
 * Bugfix: 开启过滤模式，获取HTML时删除线被过滤。
 * Bugfix: [IE] 两张相邻图片添加超级链接，修改其中一个链接，另外一个链接也会被修改。
+* Bugfix: 内嵌脚本的小于号会被转义导致脚本错误。
 
 ver 4.0.3 (2011-11-04)
 * Bugfix: [IE] 残留range.dump()调试代码，导致粘贴时报错。
