--- a/changelog.txt
+++ b/changelog.txt
@@ -24,6 +24,7 @@ ver 4.0.4
 * Bugfix: [IE] 两张相邻图片添加超级链接，修改其中一个链接，另外一个链接也会被修改。
 * Bugfix: 内嵌脚本的小于号会被转义导致脚本错误。
 * Bugfix: 分页符在不同浏览器下生成的HTML代码不一致。
+* Bugfix: [IE6-7] 插入URL里有大写字符的图片，右键点击选择图片属性，更改图片属性后图片不能显示。
 
 ver 4.0.3 (2011-11-04)
 * Bugfix: [IE] 残留range.dump()调试代码，导致粘贴时报错。
