[trunk] update changelog

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,7 +3,7 @@
 # KindEditor 变更记录
 #
 #######################################################################
-ver 4.0.4
+ver 4.0.4 (2011-12-11)
 * 新增: 阿拉伯语语言包。
 * 改善: 上传文件时显示上传中提示。
 * 改善: JSON解析失败时，通过弹出层显示服务器返回的HTML页面。
