--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,9 @@
 # KindEditor 变更记录
 #
 #######################################################################
+ver 4.0.5
+* Bugfix: 页面添加 content="IE=EmulateIE7" 后，修改颜色、行距之类的操作全部失效。
+
 ver 4.0.4 (2011-12-11)
 * 新增: 阿拉伯语语言包。
 * 改善: 上传文件时显示上传中提示。
