--- a/changelog.txt
+++ b/changelog.txt
@@ -5,7 +5,7 @@
 #######################################################################
 ver 4.0.5
 * Bugfix: 页面添加 content="IE=EmulateIE7" 后，修改颜色、行距之类的操作全部失效。
-* Bugfix: 后退时无法光标错乱。
+* Bugfix: 后退（Ctrl+Z）时光标错乱。
 
 ver 4.0.4 (2011-12-11)
 * 新增: 阿拉伯语语言包。
