--- a/changelog.txt
+++ b/changelog.txt
@@ -11,6 +11,7 @@ ver 4.0.5
 * Bugfix: [FF] 上传图片后，总是出现正在加载的样式。
 * Bugfix: [WEBKIT] event.layerX and event.layerY are broken and deprecated in WebKit.
 * Bugfix: pasteType为1（纯文本粘贴模式）时，粘贴的内容会换行。
+* Bugfix: 在iOS5上无法使用编辑器。
 
 ver 4.0.4 (2011-12-11)
 * 新增: 阿拉伯语语言包。
