[trunk] update changelog

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,7 +3,7 @@
 # KindEditor 变更记录
 #
 #######################################################################
-ver 4.0.5
+ver 4.0.5 (2012-01-15)
 * Bugfix: 页面添加 content="IE=EmulateIE7" 后，修改颜色、行距之类的操作全部失效。
 * Bugfix: 后退（Ctrl+Z）时光标错乱。
 * Bugfix: 通过粘贴纯文本框粘贴时，所有空格都变成&nbsp;。
