--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,9 @@
 # KindEditor 变更记录
 #
 #######################################################################
+ver 4.0.6
+* Bugfix: 修改plugins目录名，无法显示plugins目录下的图片。
+
 ver 4.0.5 (2012-01-15)
 * Bugfix: 页面添加 content="IE=EmulateIE7" 后，修改颜色、行距之类的操作全部失效。
 * Bugfix: 后退（Ctrl+Z）时光标错乱。
