[trunk] fix issue #306

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@
 #
 #######################################################################
 ver 4.0.6
+* 新增: imageTabIndex初始化参数，可设置插入图片弹出层的默认显示标签。
 * Bugfix: 修改plugins目录名，无法显示plugins目录下的图片。
 
 ver 4.0.5 (2012-01-15)
