--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,8 @@
 ver 4.0.6
 * 新增: imageTabIndex初始化参数，可设置插入图片弹出层的默认显示标签。
 * Bugfix: 修改plugins目录名，无法显示plugins目录下的图片。
+* Bugfix: [IE] 上传图片后，进度条一直处于加载状态。
+* Bugfix: [IE] 上传文件失败后，进度条一直处于加载状态。
 
 ver 4.0.5 (2012-01-15)
 * Bugfix: 页面添加 content="IE=EmulateIE7" 后，修改颜色、行距之类的操作全部失效。
