[trunk] fix issue #311

--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@
 ver 4.0.6
 * 新增: imageTabIndex初始化参数，可设置插入图片弹出层的默认显示标签。
 * 新增: allowFileUpload初始化参数，可设置是否显示插入文件弹出层的上传按钮。
+* 改善: 上传图片不选择文件提交时，在浏览器端验证并提示。
 * Bugfix: 修改plugins目录名，无法显示plugins目录下的图片。
 * Bugfix: [IE] 上传图片后，进度条一直处于加载状态。
 * Bugfix: [IE] 上传文件失败后，进度条一直处于加载状态。
