--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ ver 4.0.6
 * 新增: imageTabIndex初始化参数，可设置插入图片弹出层的默认显示标签。
 * 新增: allowFileUpload初始化参数，可设置是否显示插入文件弹出层的上传按钮。
 * 新增: KNode类增加eq方法。
+* 改善: 改进弹出框样式。
 * 改善: 上传图片不选择文件提交时，在浏览器端验证并提示。
 * 改善: 优化自动排版，块元素的第一个子节点是图片时不加缩进。
 * 改善: 编辑表格时，点击文档会关闭取色器。
