--- a/changelog.txt
+++ b/changelog.txt
@@ -17,6 +17,7 @@ ver 4.0.6
 * Bugfix: form添加onsubmit="return false;"，提交表单，编辑器转到代码模式就出错。
 * Bugfix: [FF] 按下全屏按钮，恢复到原来大小后没有滚动条。
 * Bugfix: 自动获取图片尺寸时，有时候得到的尺寸不准确。
+* Bugfix: [IE] 在跨域的frame里调用编辑器，会出现权限错误。
 
 ver 4.0.5 (2012-01-15)
 * Bugfix: 页面添加 content="IE=EmulateIE7" 后，修改颜色、行距之类的操作全部失效。
