--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,7 @@ ver 4.0.6
 * Bugfix: 自动获取图片尺寸时，有时候得到的尺寸不准确。
 * Bugfix: [IE] 在跨域的frame里调用编辑器，会出现权限错误。
 * Bugfix: 全屏后form失去自动提交，reset功能也失效。
+* Bugfix: 已经引入的default.css带时间戳时会重复加载CSS。
 
 ver 4.0.5 (2012-01-15)
 * Bugfix: 页面添加 content="IE=EmulateIE7" 后，修改颜色、行距之类的操作全部失效。
