--- a/changelog.txt
+++ b/changelog.txt
@@ -3,7 +3,7 @@
 # KindEditor 变更记录
 #
 #######################################################################
-ver 4.0.6
+ver 4.0.6 (2012-03-18)
 * 新增: imageTabIndex初始化参数，可设置插入图片弹出层的默认显示标签。
 * 新增: allowFileUpload初始化参数，可设置是否显示插入文件弹出层里的上传按钮。
 * 新增: KNode类增加eq方法。
