--- a/changelog.txt
+++ b/changelog.txt
@@ -4,7 +4,7 @@
 #
 #######################################################################
 ver 4.0.7
-
+* Bugfix: 上传文件失败后再上传，一直显示加载中提示。
 
 ver 4.0.6 (2012-03-18)
 * 新增: imageTabIndex初始化参数，可设置插入图片弹出层的默认显示标签。
