--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@
 # KindEditor 变更记录
 #
 #######################################################################
+ver 4.1
 
 ver 4.0.6 (2012-03-18)
 * 新增: imageTabIndex初始化参数，可设置插入图片弹出层的默认显示标签。
