--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@
 #
 #######################################################################
 ver 4.1
+* Bugfix: [IE9] 上传图片的弹出窗口，最下方的“确定”“取消”会错位，跑到跟“图片说明”文本框的后面。
 
 ver 4.0.6 (2012-03-18)
 * 新增: imageTabIndex初始化参数，可设置插入图片弹出层的默认显示标签。
