--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@
 ver 4.1
 * Bugfix: [IE9] 上传图片的弹出窗口，最下方的“确定”“取消”会错位，跑到跟“图片说明”文本框的后面。
 * Bugfix: FF、Chrome、Opera等行首全角空格被过滤，只有IE没问题。
+* Bugfix: 图片正在上传时，连续点击确定按钮，会重复提交表单。
 
 ver 4.0.6 (2012-03-18)
 * 新增: imageTabIndex初始化参数，可设置插入图片弹出层的默认显示标签。
