--- a/changelog.txt
+++ b/changelog.txt
@@ -6,6 +6,7 @@
 ver 4.1
 * 改善: uploadbutton新增form、target参数，上传图片时可提交其它控件。
 * 改善: K().children()直接返回KNode对象，原来是返回Array<KNode>。
+* 改善: K.create()支持多个textarea，新增KindEditor.instances。
 * Bugfix: [IE9] 上传图片的弹出窗口，最下方的“确定”“取消”会错位，跑到跟“图片说明”文本框的后面。
 * Bugfix: FF、Chrome、Opera等行首全角空格被过滤，只有IE没问题。
 * Bugfix: 图片正在上传时，连续点击确定按钮，会重复提交表单。
