--- a/changelog.txt
+++ b/changelog.txt
@@ -4,11 +4,13 @@
 #
 #######################################################################
 ver 4.1
+* 新增: formatUploadUrl初始化参数，false时不会自动格式化上传后的URL。
 * 改善: uploadbutton新增form、target参数，上传图片时可提交其它控件。
 * 改善: K().children()直接返回KNode对象，原来是返回Array<KNode>。
 * 改善: K.create()支持多个textarea，新增KindEditor.instances。
 * 改善: Opera 最新版本支持BR换行。
 * 改善: 当前页面的语言方向为rtl时，编辑区域也自动设置rtl。
+* 改善: PHP写入临时文件失败，提示详细错误。
 * Bugfix: [IE9] 上传图片的弹出窗口，最下方的“确定”“取消”会错位，跑到跟“图片说明”文本框的后面。
 * Bugfix: FF、Chrome、Opera等行首全角空格被过滤，只有IE没问题。
 * Bugfix: 图片正在上传时，连续点击确定按钮，会重复提交表单。
