--- a/changelog.txt
+++ b/changelog.txt
@@ -18,6 +18,7 @@ ver 4.1
 * Bugfix: [WEBKIT] 在BR换行模式下，需要两次回车才能换行。
 * Bugfix: [IE9] 在BR换行模式下，在编辑器中回车之后，光标仍然还在本行，不会移动到下一行。
 * Bugfix: noscript里的HTML代码会被转移字符。
+* Bugfix: [ASP] 文件管理对大小写敏感，大写的文件扩展名会识别不出图片。
 
 ver 4.0.6 (2012-03-18)
 * 新增: imageTabIndex初始化参数，可设置插入图片弹出层的默认显示标签。
