Add multi image upload, improve filemanager, etc.

--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@
 #
 #######################################################################
 ver 4.1
+* 新增: 批量图片上传功能（multiimage）。
 * 新增: formatUploadUrl初始化参数，false时不会自动格式化上传后的URL。
 * 新增: fullscreenShortcut初始化参数，false时禁用ESC全屏快捷键。
 * 改善: uploadbutton新增form、target参数，上传图片时可提交其它控件。
@@ -19,6 +20,7 @@ ver 4.1
 * Bugfix: [IE9] 在BR换行模式下，在编辑器中回车之后，光标仍然还在本行，不会移动到下一行。
 * Bugfix: noscript里的HTML代码会被转移字符。
 * Bugfix: [ASP] 文件管理对大小写敏感，大写的文件扩展名会识别不出图片。
+* Bugfix: 浏览文件窗口里的目录和文件图标被拉伸，看起来比较模糊。
 
 ver 4.0.6 (2012-03-18)
 * 新增: imageTabIndex初始化参数，可设置插入图片弹出层的默认显示标签。
