--- a/changelog.txt
+++ b/changelog.txt
@@ -21,6 +21,7 @@ ver 4.1
 * Bugfix: noscript里的HTML代码会被转移字符。
 * Bugfix: [ASP] 文件管理对大小写敏感，大写的文件扩展名会识别不出图片。
 * Bugfix: 浏览文件窗口里的目录和文件图标被拉伸，看起来比较模糊。
+* Bugfix: 带有超链接的图片删除以后，源代码里面还有A标签。
 
 ver 4.0.6 (2012-03-18)
 * 新增: imageTabIndex初始化参数，可设置插入图片弹出层的默认显示标签。
