--- a/changelog.txt
+++ b/changelog.txt
@@ -22,6 +22,7 @@ ver 4.1
 * Bugfix: [ASP] 文件管理对大小写敏感，大写的文件扩展名会识别不出图片。
 * Bugfix: 浏览文件窗口里的目录和文件图标被拉伸，看起来比较模糊。
 * Bugfix: 带有超链接的图片删除以后，源代码里面还有A标签。
+* Bugfix: 通过文件管理器插入本地附件时，URL可能出现连续两个斜线。
 
 ver 4.0.6 (2012-03-18)
 * 新增: imageTabIndex初始化参数，可设置插入图片弹出层的默认显示标签。
