--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,8 @@
 #######################################################################
 ver 4.1
 * 新增: 批量图片上传功能（multiimage）。
+* 新增：地图默认用百度地图（baidumap）。
+* 新增: QQ邮箱风格（贡献者：https://github.com/fisker）。
 * 新增: formatUploadUrl初始化参数，false时不会自动格式化上传后的URL。
 * 新增: fullscreenShortcut初始化参数，false时禁用ESC全屏快捷键。
 * 改善: uploadbutton新增form、target参数，上传图片时可提交其它控件。
