Update README and changelog

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,7 +3,8 @@
 # KindEditor 变更记录
 #
 #######################################################################
-ver 4.1
+
+ver 4.1 (2012-05-13)
 * 新增: 批量图片上传功能（multiimage）。
 * 新增：地图默认用百度地图（baidumap）。
 * 新增: QQ邮箱风格（贡献者：https://github.com/fisker）。
