--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,9 @@
 #
 #######################################################################
 
+ver 4.1.1
+* Bugfix: Chrome下粘贴内容代码中出现white-space:nowrap导致不换行。
+
 ver 4.1 (2012-05-12)
 * 新增: 批量图片上传功能（multiimage）。
 * 新增：地图默认用百度地图（baidumap）。
