Add extraFileUploadParams option

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,7 @@
 #######################################################################
 
 ver 4.1.1
+* 新增: extraFileUploadParams初始化参数，文件上传时，支持添加别的参数一并传到服务器。
 * Bugfix: [Chrome] 粘贴内容代码中出现white-space:nowrap导致不换行。
 * Bugfix: [IE6] 本地图片上传按钮错位。
 
