--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,8 @@
 # KindEditor 变更记录
 #
 #######################################################################
+ver 4.1.2
+* 新增: fillDescAfterUploadImage初始化参数，true时图片上传后切换到图片编辑标签。
 
 ver 4.1.1 (2012-06-10)
 * 新增: extraFileUploadParams初始化参数，文件上传时，支持添加别的参数一并传到服务器。
