--- a/changelog.txt
+++ b/changelog.txt
@@ -19,6 +19,7 @@ ver 4.1.2
 * Bugfix: 图片src为图片数据（base64 data）时，无法正常显示。
 * Bugfix: 在pre标签里无法粘贴内容。
 * Bugfix: KNode.show()和hide()，display都变成block。
+* Bugfix: 版权标识&copy;来回切换代码模式后变成(C)。
 
 ver 4.1.1 (2012-06-10)
 * 新增: extraFileUploadParams初始化参数，文件上传时，支持添加别的参数一并传到服务器。
